adjusted alignement and scrolling issues

--- a/src/components/leftMenu/LeftMenu.scss
+++ b/src/components/leftMenu/LeftMenu.scss
@@ -22,6 +22,8 @@
   background-color: #00424c;
   height: calc(100vh - 7.22rem);
 
+  overflow: hidden;
+
   &__actions {
     margin: 2rem 0;
 
